--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -15,3 +15,25 @@ a {
 a:hover {
     color: black;
 }
+
+.price-list-table {
+    box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
+}
+
+.tableRow {
+    font-weight: 500;
+    font-size: 19px;
+    line-height: 28px;
+    color: #32325d;
+}
+
+.tableRow > td {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #525f7f;
+}
+
+.farmers-list-card {
+    border: none;
+}
