--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -37,3 +37,8 @@ a:hover {
 .farmers-list-card {
     border: none;
 }
+
+.ui.active.dimmer.modals.transition {
+    display: flex !important;
+    display: -ms-flexbox !important;
+}
